--- a/Aprendendo R.ipynb
+++ b/Aprendendo R.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "541a491b",
+   "id": "210c445a",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-09-02T14:10:18.386512Z",
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4c28ce2e",
+   "id": "3e0fb452",
    "metadata": {
     "heading_collapsed": true
    },
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "048a508e",
+   "id": "9960d803",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-09-02T14:11:38.308572Z",
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "da6cc06a",
+   "id": "f983a09b",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-09-02T14:43:10.143336Z",
@@ -62,10 +62,8 @@
   },
   {
    "cell_type": "markdown",
-   "id": "53d7db16",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "id": "9b59ca23",
+   "metadata": {},
    "source": [
     "## Operadores"
    ]
@@ -77,24 +75,21 @@
     }
    },
    "cell_type": "markdown",
-   "id": "05b664f6",
-   "metadata": {
-    "hidden": true
-   },
+   "id": "963032ab",
+   "metadata": {},
    "source": [
     "![operadores aritiméticos](attachment:image.png)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "6c37ca17",
+   "execution_count": 47,
+   "id": "43493b91",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-09-02T14:51:41.415665Z",
-     "start_time": "2021-09-02T14:51:41.385Z"
-    },
-    "hidden": true
+     "end_time": "2021-09-02T16:33:44.184753Z",
+     "start_time": "2021-09-02T16:33:44.087Z"
+    }
    },
    "outputs": [
     {
@@ -129,24 +124,21 @@
     }
    },
    "cell_type": "markdown",
-   "id": "e9b94e4d",
-   "metadata": {
-    "hidden": true
-   },
+   "id": "158c3c4e",
+   "metadata": {},
    "source": [
     "![image.png](attachment:image.png)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "c65d89e7",
+   "execution_count": 48,
+   "id": "6dc34925",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-09-02T14:51:13.860579Z",
-     "start_time": "2021-09-02T14:51:13.822Z"
-    },
-    "hidden": true
+     "end_time": "2021-09-02T16:33:45.334838Z",
+     "start_time": "2021-09-02T16:33:45.271Z"
+    }
    },
    "outputs": [
     {
@@ -180,24 +172,21 @@
     }
    },
    "cell_type": "markdown",
-   "id": "a433863e",
-   "metadata": {
-    "hidden": true
-   },
+   "id": "9099fb19",
+   "metadata": {},
    "source": [
     "![image.png](attachment:image.png)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "a9fbe400",
+   "execution_count": 49,
+   "id": "e94b0622",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-09-02T14:59:25.119910Z",
-     "start_time": "2021-09-02T14:59:25.077Z"
-    },
-    "hidden": true
+     "end_time": "2021-09-02T16:33:46.314915Z",
+     "start_time": "2021-09-02T16:33:46.255Z"
+    }
    },
    "outputs": [
     {
@@ -250,7 +239,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "654acb6e",
+   "id": "326328c9",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-09-02T14:58:46.428969Z",
@@ -263,7 +252,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9e078615",
+   "id": "e136b91d",
    "metadata": {},
    "source": [
     "Vetores é um conjunto de elementos da mesma natureza, a função c() é chamada de combinar, e é muito utilizada para criar vetores."
@@ -271,28 +260,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
-   "id": "76f7f6b4",
+   "execution_count": 57,
+   "id": "fd57d7dc",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-09-02T15:17:53.150214Z",
-     "start_time": "2021-09-02T15:17:53.040Z"
+     "end_time": "2021-09-02T16:48:31.831750Z",
+     "start_time": "2021-09-02T16:48:31.744Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/html": [
-       "'Vetor de números'"
+       "'Vetor de números:'"
       ],
       "text/latex": [
-       "'Vetor de números'"
+       "'Vetor de números:'"
       ],
       "text/markdown": [
-       "'Vetor de números'"
+       "'Vetor de números:'"
       ],
       "text/plain": [
-       "[1] \"Vetor de números\""
+       "[1] \"Vetor de números:\""
       ]
      },
      "metadata": {},
@@ -340,16 +329,16 @@
     {
      "data": {
       "text/html": [
-       "'Sequência em ordem decrescente'"
+       "'Sequência em ordem decrescente:'"
       ],
       "text/latex": [
-       "'Sequência em ordem decrescente'"
+       "'Sequência em ordem decrescente:'"
       ],
       "text/markdown": [
-       "'Sequência em ordem decrescente'"
+       "'Sequência em ordem decrescente:'"
       ],
       "text/plain": [
-       "[1] \"Sequência em ordem decrescente\""
+       "[1] \"Sequência em ordem decrescente:\""
       ]
      },
      "metadata": {},
@@ -397,16 +386,16 @@
     {
      "data": {
       "text/html": [
-       "'Vetor de letras'"
+       "'Vetor de letras:'"
       ],
       "text/latex": [
-       "'Vetor de letras'"
+       "'Vetor de letras:'"
       ],
       "text/markdown": [
-       "'Vetor de letras'"
+       "'Vetor de letras:'"
       ],
       "text/plain": [
-       "[1] \"Vetor de letras\""
+       "[1] \"Vetor de letras:\""
       ]
      },
      "metadata": {},
@@ -500,28 +489,28 @@
    "source": [
     "# criando vetor numérico\n",
     "numeros <- c(1,5,3,7,1,5)\n",
-    "'Vetor de números'\n",
+    "'Vetor de números:'\n",
     "numeros\n",
     "\n",
     "# criando sequência de números\n",
     "sequencia <- c(5:0)\n",
-    "'Sequência em ordem decrescente'\n",
+    "'Sequência em ordem decrescente:'\n",
     "sequencia\n",
     "\n",
     "# vetor de strings\n",
     "letras <- c('João','Pedro','Ana','Zack')\n",
-    "'Vetor de letras'\n",
+    "'Vetor de letras:'\n",
     "letras\n",
     "\n",
     "# vetor misto\n",
     "mistura <- c('abacate',2,'banana',3)\n",
-    "'Vetor misto'\n",
+    "\"Vetor misto\"\n",
     "mistura"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "d485f4a6",
+   "id": "ffeb0049",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-09-02T15:19:15.014927Z",
@@ -533,9 +522,50 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ede363bf",
+   "metadata": {},
+   "source": [
+    "## Condições "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "11584440",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-09-02T16:59:58.407941Z",
+     "start_time": "2021-09-02T16:59:58.370Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "if (a > c){}\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ccd4c88d",
+   "metadata": {},
+   "source": [
+    "# Referências"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4b580fa7",
+   "metadata": {},
+   "source": [
+    "> http://www.estatisticacomr.uff.br/?p=209\n",
+    "\n",
+    "> Livro: Manual Básico da Linguagem R: introdução à análise de dados"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "707e01d1",
+   "id": "9f4adac5",
    "metadata": {},
    "outputs": [],
    "source": []
