--- a/Aprendendo R.ipynb
+++ b/Aprendendo R.ipynb
@@ -16,9 +16,7 @@
   {
    "cell_type": "markdown",
    "id": "3e0fb452",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Variáveis"
    ]
@@ -30,8 +28,7 @@
     "ExecuteTime": {
      "end_time": "2021-09-02T14:11:38.308572Z",
      "start_time": "2021-09-02T14:11:38.229Z"
-    },
-    "hidden": true
+    }
    },
    "source": [
     "<strong>Formas de criar variáveis em R <br>Operador de atribuição:</strong> <-"
@@ -39,14 +36,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "f983a09b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-09-02T14:43:10.143336Z",
-     "start_time": "2021-09-02T14:43:10.115Z"
-    },
-    "hidden": true
+     "end_time": "2021-09-03T18:28:19.210745Z",
+     "start_time": "2021-09-03T18:28:19.178Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -83,12 +79,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 2,
    "id": "43493b91",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-09-02T16:33:44.184753Z",
-     "start_time": "2021-09-02T16:33:44.087Z"
+     "end_time": "2021-09-03T18:28:19.293751Z",
+     "start_time": "2021-09-03T18:28:19.261Z"
     }
    },
    "outputs": [
@@ -132,12 +128,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 3,
    "id": "6dc34925",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-09-02T16:33:45.334838Z",
-     "start_time": "2021-09-02T16:33:45.271Z"
+     "end_time": "2021-09-03T18:28:19.326752Z",
+     "start_time": "2021-09-03T18:28:19.299Z"
     }
    },
    "outputs": [
@@ -180,12 +176,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 4,
    "id": "e94b0622",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-09-02T16:33:46.314915Z",
-     "start_time": "2021-09-02T16:33:46.255Z"
+     "end_time": "2021-09-03T18:28:19.385757Z",
+     "start_time": "2021-09-03T18:28:19.343Z"
     }
    },
    "outputs": [
@@ -260,12 +256,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 5,
    "id": "fd57d7dc",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-09-02T16:48:31.831750Z",
-     "start_time": "2021-09-02T16:48:31.744Z"
+     "end_time": "2021-09-03T18:28:19.490768Z",
+     "start_time": "2021-09-03T18:28:19.408Z"
     }
    },
    "outputs": [
@@ -530,19 +526,305 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 58,
-   "id": "11584440",
+   "cell_type": "markdown",
+   "id": "2daa0bd3",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-09-02T16:59:58.407941Z",
-     "start_time": "2021-09-02T16:59:58.370Z"
+     "end_time": "2021-09-03T14:44:05.232169Z",
+     "start_time": "2021-09-03T14:44:03.125Z"
+    }
+   },
+   "source": [
+    "<strong>Sintaxe</strong><br>\n",
+    "> if ( condição for verdadeira ) {<br>\n",
+    "----comando para executar<br>\n",
+    "} else {<br>\n",
+    "----comando para executar<br>\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "12aa1498",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-09-03T18:28:19.561773Z",
+     "start_time": "2021-09-03T18:28:19.530Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1] \"É menor\"\n"
+     ]
+    }
+   ],
+   "source": [
+    "# exemplo\n",
+    "if (a > c) {\n",
+    "    print(\"Olá R\")\n",
+    "} else {\n",
+    "    print(\"É menor\")\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2c044431",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-09-03T15:07:33.810288Z",
+     "start_time": "2021-09-03T15:07:33.626Z"
+    }
+   },
+   "source": [
+    "<strong>Sintaxe</strong>\n",
+    "\n",
+    "> ifelse (testa, se verdadeiro, se falso)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "b03cbd45",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-09-03T18:28:19.604776Z",
+     "start_time": "2021-09-03T18:28:19.574Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "'não é igual'"
+      ],
+      "text/latex": [
+       "'não é igual'"
+      ],
+      "text/markdown": [
+       "'não é igual'"
+      ],
+      "text/plain": [
+       "[1] \"não é igual\""
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "ifelse (c == a, \"é igual\", \"não é igual\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5c21326e",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-09-03T15:09:09.231523Z",
+     "start_time": "2021-09-03T15:09:09.206Z"
+    }
+   },
+   "source": [
+    "## Loops"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a6c6a826",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-09-03T17:22:06.741472Z",
+     "start_time": "2021-09-03T17:22:06.718Z"
+    }
+   },
+   "source": [
+    "### loop for\n",
+    "\n",
+    "> for ( variável in lista ) { instrução }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "6253061d",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-09-03T18:28:19.676780Z",
+     "start_time": "2021-09-03T18:28:19.647Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1] 1\n",
+      "[1] 4\n",
+      "[1] 32\n",
+      "[1] 76\n",
+      "[1] 85\n"
+     ]
+    }
+   ],
+   "source": [
+    "lista <- c(1,4,32,76,85)\n",
+    "\n",
+    "# utilizando FOR\n",
+    "for (i in lista) {\n",
+    "    print(i)\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8a6de042",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-09-03T16:59:26.849354Z",
+     "start_time": "2021-09-03T16:59:26.788Z"
+    }
+   },
+   "source": [
+    "### loop while\n",
+    "\n",
+    "> while ( condição ) { instrução }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "f64bb05b",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-09-03T18:28:19.719786Z",
+     "start_time": "2021-09-03T18:28:19.684Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1] 1\n",
+      "[1] 2\n",
+      "[1] 3\n",
+      "[1] 4\n",
+      "[1] 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "x <- 0\n",
+    "while (x < length(lista)) {\n",
+    "    x <- x + 1\n",
+    "    print(x)\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ed59f622",
+   "metadata": {},
+   "source": [
+    "## Definir funções"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "59cc45ba",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-09-03T17:47:00.408747Z",
+     "start_time": "2021-09-03T17:47:00.384Z"
+    }
+   },
+   "source": [
+    "<strong>Sintaxe</strong>\n",
+    "\n",
+    "> variavel <- function ( arg1, arg2... ) { estrutura da função }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "14f006f6",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-09-03T18:28:43.731604Z",
+     "start_time": "2021-09-03T18:28:43.697Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "8"
+      ],
+      "text/latex": [
+       "8"
+      ],
+      "text/markdown": [
+       "8"
+      ],
+      "text/plain": [
+       "[1] 8"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "somar <- function (x, y) {\n",
+    "    sum <- x + y\n",
+    "    return (sum)\n",
+    "}\n",
+    "somar(2, 6)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9a6fe543",
+   "metadata": {},
+   "source": [
+    "# Conectando ao banco de dados"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "12cb9cda",
+   "metadata": {},
+   "source": [
+    "## Carregando pacotes/bibliotecas"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0a9a2445",
+   "metadata": {},
+   "source": [
+    "<strong>Sintaxe</strong>\n",
+    "\n",
+    "> library ( nome do pacote )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b6c9b0d7",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-09-03T18:05:22.640321Z",
+     "start_time": "2021-09-03T18:04:15.722Z"
     }
    },
    "outputs": [],
-   "source": [
-    "if (a > c){}\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -554,18 +836,39 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7369603c",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-09-03T17:31:23.928730Z",
+     "start_time": "2021-09-03T17:31:23.908Z"
+    }
+   },
+   "source": [
+    "NOTA: Faça uso das referências para maiores informações e aprendizado."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "4b580fa7",
    "metadata": {},
    "source": [
-    "> http://www.estatisticacomr.uff.br/?p=209\n",
+    "> 0. \n",
     "\n",
-    "> Livro: Manual Básico da Linguagem R: introdução à análise de dados"
+    "> 1. http://www.estatisticacomr.uff.br/?p=209\n",
+    "\n",
+    "> 2. (Livro: Manual Básico da Linguagem R: introdução à análise de dados\n",
+    "\n",
+    "> 3. http://manuals.bioinformatics.ucr.edu/home/programming-in-r#TOC-Apply-Loop-Family\n",
+    "\n",
+    "> 4. http://www.leg.ufpr.br/~walmes/cursoR/guia_rapido_R.pdf\n",
+    "\n",
+    "> 5. https://www.devmedia.com.br/trabalhando-com-a-linguagem-r/33275"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9f4adac5",
+   "id": "dc3d56d7",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -595,13 +898,13 @@
    "title_sidebar": "Contents",
    "toc_cell": false,
    "toc_position": {
-    "height": "calc(100% - 180px)",
-    "left": "10px",
-    "top": "150px",
-    "width": "210px"
+    "height": "469px",
+    "left": "28px",
+    "top": "181px",
+    "width": "214px"
    },
    "toc_section_display": true,
-   "toc_window_display": true
+   "toc_window_display": false
   },
   "varInspector": {
    "cols": {
