Atualização das referências

--- a/Aprendendo R.ipynb
+++ b/Aprendendo R.ipynb
@@ -36,12 +36,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "id": "f983a09b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-09-03T18:28:19.210745Z",
-     "start_time": "2021-09-03T18:28:19.178Z"
+     "end_time": "2021-09-03T18:36:31.354136Z",
+     "start_time": "2021-09-03T18:36:31.322Z"
     }
    },
    "outputs": [],
@@ -79,12 +79,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "id": "43493b91",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-09-03T18:28:19.293751Z",
-     "start_time": "2021-09-03T18:28:19.261Z"
+     "end_time": "2021-09-03T18:36:31.439141Z",
+     "start_time": "2021-09-03T18:36:31.398Z"
     }
    },
    "outputs": [
@@ -128,12 +128,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "id": "6dc34925",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-09-03T18:28:19.326752Z",
-     "start_time": "2021-09-03T18:28:19.299Z"
+     "end_time": "2021-09-03T18:36:31.484145Z",
+     "start_time": "2021-09-03T18:36:31.451Z"
     }
    },
    "outputs": [
@@ -176,12 +176,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "id": "e94b0622",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-09-03T18:28:19.385757Z",
-     "start_time": "2021-09-03T18:28:19.343Z"
+     "end_time": "2021-09-03T18:36:31.537149Z",
+     "start_time": "2021-09-03T18:36:31.498Z"
     }
    },
    "outputs": [
@@ -256,12 +256,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "id": "fd57d7dc",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-09-03T18:28:19.490768Z",
-     "start_time": "2021-09-03T18:28:19.408Z"
+     "end_time": "2021-09-03T18:36:31.673161Z",
+     "start_time": "2021-09-03T18:36:31.577Z"
     }
    },
    "outputs": [
@@ -545,12 +545,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "id": "12aa1498",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-09-03T18:28:19.561773Z",
-     "start_time": "2021-09-03T18:28:19.530Z"
+     "end_time": "2021-09-03T18:36:31.738166Z",
+     "start_time": "2021-09-03T18:36:31.701Z"
     }
    },
    "outputs": [
@@ -588,12 +588,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "id": "b03cbd45",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-09-03T18:28:19.604776Z",
-     "start_time": "2021-09-03T18:28:19.574Z"
+     "end_time": "2021-09-03T18:36:31.786169Z",
+     "start_time": "2021-09-03T18:36:31.751Z"
     }
    },
    "outputs": [
@@ -650,12 +650,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "id": "6253061d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-09-03T18:28:19.676780Z",
-     "start_time": "2021-09-03T18:28:19.647Z"
+     "end_time": "2021-09-03T18:36:31.864175Z",
+     "start_time": "2021-09-03T18:36:31.826Z"
     }
    },
    "outputs": [
@@ -697,12 +697,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "id": "f64bb05b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-09-03T18:28:19.719786Z",
-     "start_time": "2021-09-03T18:28:19.684Z"
+     "end_time": "2021-09-03T18:36:31.900176Z",
+     "start_time": "2021-09-03T18:36:31.861Z"
     }
    },
    "outputs": [
@@ -751,12 +751,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 22,
    "id": "14f006f6",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-09-03T18:28:43.731604Z",
-     "start_time": "2021-09-03T18:28:43.697Z"
+     "end_time": "2021-09-03T18:36:31.967182Z",
+     "start_time": "2021-09-03T18:36:31.933Z"
     }
    },
    "outputs": [
@@ -852,17 +852,17 @@
    "id": "4b580fa7",
    "metadata": {},
    "source": [
-    "> 0. \n",
+    "> 0. [Guia de Markdown](https://www.markdownguide.org/basic-syntax/)\n",
     "\n",
-    "> 1. http://www.estatisticacomr.uff.br/?p=209\n",
+    "> 1. [Estatística é com R!](http://www.estatisticacomr.uff.br/?p=209)\n",
     "\n",
-    "> 2. (Livro: Manual Básico da Linguagem R: introdução à análise de dados\n",
+    "> 2. [Livro: Manual Básico da Linguagem R: introdução à análise de dados](https://www.amazon.com.br/gp/product/B07N493V6J/ref=ppx_yo_dt_b_d_asin_title_o00?ie=UTF8&psc=1)\n",
     "\n",
-    "> 3. http://manuals.bioinformatics.ucr.edu/home/programming-in-r#TOC-Apply-Loop-Family\n",
+    "> 3. [Institute for Integrative Genome biology](http://manuals.bioinformatics.ucr.edu/home/programming-in-r#TOC-Apply-Loop-Family)\n",
     "\n",
-    "> 4. http://www.leg.ufpr.br/~walmes/cursoR/guia_rapido_R.pdf\n",
+    "> 4. [Guia rápido de R](http://www.leg.ufpr.br/~walmes/cursoR/guia_rapido_R.pdf)\n",
     "\n",
-    "> 5. https://www.devmedia.com.br/trabalhando-com-a-linguagem-r/33275"
+    "> 5. [https://www.devmedia.com.br/trabalhando-com-a-linguagem-r/33275"
    ]
   },
   {
